wandb/run-20200408_224410-1vgeye0v/output.log
torch.Size([10, 4, 2000])
Traceback (most recent call last):
  File "train.py", line 17, in <module>
    import viz
  File "/home/Wr1t3R/PQRST/unet/viz.py", line 22
    lines = [((x0, y0), (x1, y1)) for x0, y0, x1, y1 in zip(x.shape[0][:-1], x[:-1], x.shape[0][1:], x[1:]]
                                                                                                          ^
SyntaxError: invalid syntax
